# xv6-rust

./: .gitignore  Cargo.toml  Makefile  README.MD  main
.cargo/: config
kernel/: Cargo.toml  kernelvec.S  main.c
kernel/.cargo/: config
kernel/src/: bio.rs  buf.rs  console.rs  elf.rs  exec.rs  kalloc.rs  log.rs  main.rs  memlayout.rs  param.rs  pipe.rs  plic.rs  printf.rs  proc.rs  riscv.rs  sleeplock.rs  spinlock.rs  start.rs  stat.rs  string.rs  trap.rs  uart.rs  vm.rs
kernel/src/asm/: mod.rs  trampoline.S
kernel/src/file/: fcntl.rs  file.rs  mod.rs
kernel/src/fs/: fs.rs  mod.rs
kernel/src/ld/: kernel.ld
kernel/src/syscall/: mod.rs  syscall.rs  sysfile.rs  sysproc.rs
kernel/src/virtio/: mod.rs  virtio_disk.rs
mkfs/: Cargo.toml  Makefile  fs.img
mkfs/src/: deps.rs  main.rs
mkfs/user/: _init  _sh
src/: asm.rs  main.rs  memlayout.rs  printf.rs  proc.rs  riscv.rs  spinlock.rs  start.rs  uart.rs
src/kernel/: bio.rs  console.rs  entry.S  file.rs  fs.rs  kalloc.rs  kernel.ld  kernelvec.S  main.rs  memlayout.rs  pipe.rs  printf.rs  proc.rs  riscv.rs  sleeplock.rs  trap.rs  (+4 more)
user/: Cargo.toml  build.rs
user/.cargo/: config
user/init/: Cargo.toml
user/init/src/: main.rs
user/initcode/: Cargo.toml  Makefile  initcode.S  initcode.asm
user/initcode/src/: main.rs
user/src/: echo.rs  init.rs  sh.rs
user/src/asm/: mod.rs
user/src/ld/: user.ld
user/src/ulib/: lib.rs  stubs.rs  umalloc.rs
user/ulib/: Cargo.toml
user/ulib/src/: lib.rs  stubs.rs  usys.S
user/user/: Cargo.toml
user/user/src/: echo.rs  init.rs
user/user/src/ulib/: lib.rs
(+6 files in other folders)
