[package]
name = "mkfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mkfs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = [ "derive" ]}
kernel = { path = "../kernel", features = ["kernel_as_a_lib"] }